--- a/.github/workflows/publish-dev-images.yml
+++ b/.github/workflows/publish-dev-images.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/login-action@v1
         with:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
       - 
         name: Get Version number
         id: get-version
