--- a/.github/workflows/publish-dev-images.yml
+++ b/.github/workflows/publish-dev-images.yml
@@ -82,6 +82,7 @@ jobs:
         -
           name: Package SigScalr
           run: |
+            chmod +x package_siglens.sh
             ./package_siglens.sh -p linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
         - name: release
           uses: actions/create-release@v1
