--- a/.github/workflows/publish-dev-images.yml
+++ b/.github/workflows/publish-dev-images.yml
@@ -90,7 +90,7 @@ jobs:
           with:
               draft: false
               prerelease: false
-              release_name: Release ${{ steps.version.outputs.version }}
+              release_name: ${{ steps.version.outputs.version }}
               tag_name: ${{ steps.version.outputs.version }}
           env:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
