--- a/.github/workflows/publish-dev-images.yml
+++ b/.github/workflows/publish-dev-images.yml
@@ -91,7 +91,7 @@ jobs:
               draft: false
               prerelease: false
               release_name: ${{ steps.version.outputs.version }}
-              tag_name: ${{ github.ref }}
+              tag_name: ${{ steps.version.outputs.version }}
               # body_path: CHANGELOG.md
           env:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
