--- a/.github/workflows/publish-dev-images.yml
+++ b/.github/workflows/publish-dev-images.yml
@@ -86,7 +86,7 @@ jobs:
           name: Package SigScalr
           run: |
             chmod +x package_siglens.sh
-            ./package_siglens.sh -p linux/amd64
+            ./package_siglens.sh -p linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
         - name: release
           uses: actions/create-release@v1
           id: create_release
@@ -95,7 +95,6 @@ jobs:
               prerelease: false
               release_name: ${{ env.TAG }}
               tag_name: ${{ env.TAG }}
-              # body_path: CHANGELOG.md
           env:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
         - name: upload linux amd artifact
@@ -107,7 +106,34 @@ jobs:
             asset_path: "siglens-${{ env.TAG }}-linux-amd64.tar.gz"
             asset_name: "siglens-${{ env.TAG }}-linux-amd64.tar.gz"
             asset_content_type: application/gzip
-        
+        - name: upload linux arm artifact
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: "siglens-${{ env.TAG }}-linux-arm64.tar.gz"
+            asset_name: "siglens-${{ env.TAG }}-linux-arm64.tar.gz"
+            asset_content_type: application/gzip
+   
+        - name: upload darwin amd artifact
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: "siglens-${{ env.TAG }}-darwin-amd64.tar.gz"
+            asset_name: "siglens-${{ env.TAG }}-darwin-amd64.tar.gz"
+            asset_content_type: application/gzip
+        - name: upload darwin arm artifact
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }}
+            asset_path: "siglens-${{ env.TAG }}-darwin-arm64.tar.gz"
+            asset_name: "siglens-${{ env.TAG }}-darwin-arm64.tar.gz"
+            asset_content_type: application/gzip
         - name: Upload Release Asset - server.yaml
           id: upload-release-asset-serverConfig
           uses: actions/upload-release-asset@v1
