--- a/.github/workflows/publish-dev-images.yml
+++ b/.github/workflows/publish-dev-images.yml
@@ -76,8 +76,8 @@ jobs:
         - 
           name: version
           run: |
-            TAG=$(sed -n 's/const SigLensVersion = "\(.*\)"/\1/p' pkg/config/version.go)
-            echo "TAG=$TAG" >> $GITHUB_ENV
+            RELEASE_TAG=$(sed -n 's/const SigLensVersion = "\(.*\)"/\1/p' pkg/config/version.go)
+            echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_ENV
             cat $GITHUB_ENV
         -
           name: Package SigScalr
@@ -90,8 +90,8 @@ jobs:
           with:
               draft: false
               prerelease: false
-              release_name: ${{ env.TAG }}
-              tag_name: ${{ env.TAG }}
+              release_name: ${{ env.RELEASE_TAG }}
+              tag_name: ${{ env.RELEASE_TAG }}
           env:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
         - name: upload linux amd artifact
@@ -100,8 +100,8 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
           with:
             upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: "siglens-${{ env.TAG }}-linux-amd64.tar.gz"
-            asset_name: "siglens-${{ env.TAG }}-linux-amd64.tar.gz"
+            asset_path: "siglens-${{ env.RELEASE_TAG }}-linux-amd64.tar.gz"
+            asset_name: "siglens-${{ env.RELEASE_TAG }}-linux-amd64.tar.gz"
             asset_content_type: application/gzip
         - name: upload linux arm artifact
           uses: actions/upload-release-asset@v1
@@ -109,8 +109,8 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
           with:
             upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: "siglens-${{ env.TAG }}-linux-arm64.tar.gz"
-            asset_name: "siglens-${{ env.TAG }}-linux-arm64.tar.gz"
+            asset_path: "siglens-${{ env.RELEASE_TAG }}-linux-arm64.tar.gz"
+            asset_name: "siglens-${{ env.RELEASE_TAG }}-linux-arm64.tar.gz"
             asset_content_type: application/gzip
    
         - name: upload darwin amd artifact
@@ -119,8 +119,8 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
           with:
             upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: "siglens-${{ env.TAG }}-darwin-amd64.tar.gz"
-            asset_name: "siglens-${{ env.TAG }}-darwin-amd64.tar.gz"
+            asset_path: "siglens-${{ env.RELEASE_TAG }}-darwin-amd64.tar.gz"
+            asset_name: "siglens-${{ env.RELEASE_TAG }}-darwin-amd64.tar.gz"
             asset_content_type: application/gzip
         - name: upload darwin arm artifact
           uses: actions/upload-release-asset@v1
@@ -128,8 +128,8 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
           with:
             upload_url: ${{ steps.create_release.outputs.upload_url }}
-            asset_path: "siglens-${{ env.TAG }}-darwin-arm64.tar.gz"
-            asset_name: "siglens-${{ env.TAG }}-darwin-arm64.tar.gz"
+            asset_path: "siglens-${{ env.RELEASE_TAG }}-darwin-arm64.tar.gz"
+            asset_name: "siglens-${{ env.RELEASE_TAG }}-darwin-arm64.tar.gz"
             asset_content_type: application/gzip
         - name: Upload Release Asset - server.yaml
           id: upload-release-asset-serverConfig
