--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -1,15 +1,15 @@
-name: siglensdev-docker-release
+name: siglens-docker-release
 on:
   push:
     branches:
-      - 'develop'
+      - 'main'
 jobs:
-  siglensdev-docker:
+  siglens-docker:
     runs-on: ubuntu-latest
     environment: build-environment
     permissions:
-      id-token: write
-      contents: read
+        id-token: write
+        contents: read
     steps:
       -
         name: Checkout
@@ -27,22 +27,22 @@ jobs:
         name: Get Version number
         id: get-version
         run: |
-          TAG=$(sed -n 's/const SigLensVersion = "\(.*\)"/\1/p' pkg/config/version.go)
-          echo "TAG=$TAG" >> $GITHUB_ENV
-          cat $GITHUB_ENV
+            TAG=$(sed -n 's/const SigLensVersion = "\(.*\)"/\1/p' pkg/config/version.go)
+            echo "TAG=$TAG" >> $GITHUB_ENV
+            cat $GITHUB_ENV
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
             images: siglens/siglens
             tags: |
-               type=raw,value=${{ env.TAG }}
+              type=raw,value=${{ env.TAG }}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - 
-       name: Set up Docker Buildx
-       uses: docker/setup-buildx-action@v2
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       -
         name: Build and push
         uses: docker/build-push-action@v3
@@ -80,7 +80,7 @@ jobs:
             echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_ENV
             cat $GITHUB_ENV
         -
-          name: Package SigScalr
+          name: Package SigLens
           run: |
             chmod +x package_siglens.sh
             ./package_siglens.sh -p linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
@@ -112,7 +112,7 @@ jobs:
             asset_path: "siglens-${{ env.RELEASE_TAG }}-linux-arm64.tar.gz"
             asset_name: "siglens-${{ env.RELEASE_TAG }}-linux-arm64.tar.gz"
             asset_content_type: application/gzip
-   
+    
         - name: upload darwin amd artifact
           uses: actions/upload-release-asset@v1
           env:
