--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.21",
     "mocha": "^10.0.0",
     "puppeteer": "^16.2.0",
+    "selenium-webdriver": "^4.15.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
