--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -2,7 +2,7 @@ name: siglens-docker-release
 on:
   push:
     branches:
-      - 'develop'
+      - 'cgo_test'
 jobs:
   siglens-docker:
     runs-on: ubuntu-latest
