--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -73,6 +73,19 @@ jobs:
         - 
           name: install cross compiler for linux/amd64
           run: sudo apt-get -y install build-essential
+      
+        # Setup Rust, use the x86_64-apple-darwin target but the rest can be customized.
+        - uses: ATiltedTree/setup-rust@v1
+          with:
+            targets: x86_64-apple-darwin
+            rust-version: nightly
+
+        # Use the v1 of this action
+        - uses: mbround18/setup-osxcross@v1
+        # This builds executables & sets env variables for rust to consume.
+          with:
+            osx-version: "12.3"
+
         - 
           name: version
           run: |
