--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,4 +1,5 @@
 name: Upload coverage reports to Codecov
+on: [pull_request]
 uses: codecov/codecov-action@v4
 env:
   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
