--- a/.github/workflows/uts.yml
+++ b/.github/workflows/uts.yml
@@ -8,6 +8,10 @@ jobs:
     name: golang-cicd
     runs-on: ubuntu-latest
     steps:
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}    
       - uses: actions/cache@v3
         with:
           path: |
