--- a/.github/workflows/uts.yml
+++ b/.github/workflows/uts.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run Unit Tests
         run: go test ./...
       - name: Run Coverage
-        run: go test ./... -race -coverprofile=coverage.txt -covermode=atomic
+        run: go test ./... -coverprofile=coverage.txt -covermode=atomic
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
