Update codecov.yml (#316)
* Update codecov.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Update codecov.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Update codecov.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Update uts.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Delete .github/workflows/codecov.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Update uts.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Update uts.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* Update uts.yml

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

* disable flaky dashboard tests for now

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

---------

Signed-off-by: Kunal Nawale <knawale@sigscalr.io>

--- a/.github/workflows/uts.yml
+++ b/.github/workflows/uts.yml
@@ -30,8 +30,14 @@ jobs:
           fi
       - name: Build
         run: go build ./...
-      - name: Test
+      - name: Run Unit Tests
         run: go test ./...
+      - name: Run Coverage
+        run: go test ./... -coverprofile=coverage.txt -covermode=atomic
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}            
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
