--- a/server.yaml
+++ b/server.yaml
@@ -11,6 +11,7 @@ dataPath : data/
 ## field name to use as a timestamp key
 timestampKey : timestamp
 
+pqsEnabled: false
 
 ## Elasticsearch Version for kibana integration
 esVersion: "7.9.3"
