Added otel collector config file and made changes to setup otel collector in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,11 @@ services:
       - UI_PORT=${UI_PORT}
       - WORK_DIR=${WORK_DIR}
       - SIGLENS_VERSION=${SIGLENS_VERSION}
+
+  otel-collector:
+    image: otel/opentelemetry-collector:latest  
+    volumes:
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml  
+    ports:
+      - "4318:4318"
+    command: ["--config=/etc/otel-collector-config.yaml"]   
