--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -187,4 +187,14 @@ jobs:
             asset_path: docker-compose.yml
             asset_name: docker-compose.yml
             asset_content_type: application/octet-stream
+        -- name: Upload Release Asset - otel-collector-config.yaml
+           id: upload-release-asset-OtelCollector
+           uses: actions/upload-release-asset@v1
+           env:
+             GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+           with:
+             upload_url: ${{ steps.create_release.outputs.upload_url }} 
+             asset_path: otel-collector-config.yaml
+             asset_name: otel-collector-config.yaml
+             asset_content_type: application/octet-stream
     
