--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - SIGLENS_VERSION=${SIGLENS_VERSION}
 
   hotrod:
-    image: jaegertracing/example-hotrod:latest
+    image: jaegertracing/example-hotrod:1.53
     ports:
       - "8080:8080"
     environment:
