--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   siglens:
-    image: siglens/siglens:${SIGLENS_VERSION}
+    image: ${IMAGE_NAME}
     ports:
       - "8081:8081"
       - "${UI_PORT}:5122"
