schedule script to run at certain time

--- a/.github/workflows/develop-e2e-install.yml
+++ b/.github/workflows/develop-e2e-install.yml
@@ -1,10 +1,8 @@
 name: develop-e2e-install-test
 
-# TODO: update the below conditions as required
 on:
-  push:
-    branches:
-      - '**'
+  schedule:
+    - cron: '0 15 * * *'
 
 jobs:
   build:
