--- a/.github/workflows/develop-e2e-install.yml
+++ b/.github/workflows/develop-e2e-install.yml
@@ -43,4 +43,4 @@ jobs:
     - name: Run E2E Test
       run: |
         cd tools/sigclient
-        go run main.go query esbulk -d http://localhost:5122 -f ../../cicd/ingest.csv
+        go run main.go query esbulk -d http://localhost:5122 -f ../../cicd/sample_log_dataset_queries.csv
