Github actions workflow to test install docker script (#395)
* FIX dashboard name refresh

* FIX Display an empty drop-down

* add tooltip to alert bell icon

* Revert "add tooltip to alert bell icon"

This reverts commit e8459774f6b8d2e2e4f0848b8899b369724e4c9c.

* test workflow

* update docker-compose.yml

* exit if server is not up

* update docker script and docker-compose.yml

* schedule script to run at certain time

* test e2e

* add on push for testing

* update port

* add sleep

* run in single step

* divide into multiple steps

* remove on push

* added queries csv for sample-log-dataset

* added on push

* update query

* update script

* update script

* update script

* update script

* update queries

* update queries

* update queries

* removed on push

* added OR test

---------

Signed-off-by: Venkatesha Matam <113487319+venkateshamatam@users.noreply.github.com>
Co-authored-by: venkateshamatam <>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   siglens:
-    image: siglens/siglens:${SIGLENS_VERSION}
+    image: ${IMAGE_NAME}
     ports:
       - "8081:8081"
       - "${UI_PORT}:5122"
@@ -13,8 +13,7 @@ services:
     environment:
       - UI_PORT=${UI_PORT}
       - WORK_DIR=${WORK_DIR}
-      - SIGLENS_VERSION=${SIGLENS_VERSION}
-
+      - IMAGE_NAME=${IMAGE_NAME}
   hotrod:
     image: jaegertracing/example-hotrod:1.53
     ports:
