--- a/ingestion-methods/fluentd/fluentd_elasticsearch.conf
+++ b/ingestion-methods/fluentd/fluentd_elasticsearch.conf
@@ -1,19 +1,21 @@
-# <source>
-#   @type tail
-#   path /home/ubuntu/Siglens/migration1/SplunkExport.json
-#   pos_file /var/log/td-agent/httpd-access.log.pos
-#   tag my.logs
-#   <parse>
-#     @type json
-#   </parse>
-# </source>
+<source>
+  @type tail
+  path D:\Siglens\SplunkExport.json
+  pos_file D:\Siglens\fluentd_logs\SplunkExport1.log.pos
+  tag my.logs
+  read_from_head true
+  <parse>
+    @type json
+  </parse>
+</source>
 
-# <match my.logs>
-#   @type elasticsearch
-#   hosts http://localhost:8081/elastic/
-#   logstash_format true
-#   include_tag_key true
-#   tag_key @log_name
-#   verify_es_version_at_startup false
-#   default_elasticsearch_version 7.9.3
-# </match>
+<match my.logs>
+  @type elasticsearch
+  host http://localhost:8081/elastic
+  logstash_format true
+  include_tag_key true
+  tag_key @log_name
+  verify_es_version_at_startup false
+  default_elasticsearch_version 7.9
+  request_timeout 45s # defaults to 5s
+</match>
