--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 services:
   siglens:
-    container_name: siglens_siglens_podman_2
     image: ${IMAGE_NAME}
     ports:
       - "8081:8081"
@@ -16,6 +15,8 @@ services:
       - WORK_DIR=${WORK_DIR}
       - IMAGE_NAME=${IMAGE_NAME}
       - CSI=${CSI}
+    networks:
+      - podman-network_siglens
   hotrod:
     image: docker.io/jaegertracing/example-hotrod:1.53
     ports:
@@ -24,11 +25,19 @@ services:
       - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://siglens:8081/otlp/v1/traces
     depends_on:
       - siglens
+    networks:
+      - podman-network_siglens
 
   siglens-metrics-otel-collector:
     image: docker.io/otel/opentelemetry-collector:latest  
     volumes:
-      - ./ssmetrics-otel-collector-config.yaml:/etc/ssmetrics-otel-collector-config.yaml  
+      - ${WORK_DIR}/ssmetrics-otel-collector-config.yaml:/etc/ssmetrics-otel-collector-config.yaml 
     ports:
       - "4318:4318"
-    command: ["--config=/etc/ssmetrics-otel-collector-config.yaml"]  
+    command: ["--config=/etc/ssmetrics-otel-collector-config.yaml"]
+    networks:
+      - podman-network_siglens
+networks:
+  podman-network_siglens:
+    external:
+      name: podman-network_siglens 
