--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -29,13 +29,12 @@ services:
       - podman-network_siglens
 
   siglens-metrics-otel-collector:
-    image: docker.io/otel/opentelemetry-collector:latest  
+    image: docker.io/otel/opentelemetry-collector:latest
     volumes:
-      - "${WORK_DIR}/ssmetrics-otel:/etc/ssmetrics-otel"
-      - "${WORK_DIR}/ssmetrics-otel/ssmetrics-otel-collector-config.yaml:/etc/ssmetrics-otel/ssmetrics-otel-collector-config.yaml"
+      - "${WORK_DIR}/ssmetrics-otel-collector-config.yaml:/etc/ssmetrics-otel-collector-config.yaml
     ports:
       - "4318:4318"
-    command: ["--config=/etc/ssmetrics-otel/ssmetrics-otel-collector-config.yaml"]
+    command: ["--config=/etc/ssmetrics-otel-collector-config.yaml"]
     networks:
       - podman-network_siglens
 networks:
