--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -197,4 +197,24 @@ jobs:
             asset_path: ssmetrics-otel-collector-config.yaml
             asset_name: ssmetrics-otel-collector-config.yaml
             asset_content_type: application/octet-stream
+        - name: Upload Release Asset - podman-compose.yaml
+          id: upload-release-asset-PodmanCompose
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} 
+            asset_path: podman-compose.yaml
+            asset_name: podman-compose.yaml
+            asset_content_type: application/octet-stream
+        - name: Upload Release Asset - podman-network_siglens.conflist
+          id: upload-release-asset-Podman-Network_SigLens
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} 
+            asset_path: podman-network_siglens.conflist
+            asset_name: podman-network_siglens.conflist
+            asset_content_type: application/octet-stream
     
