feat: added install script as release asset

--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -177,6 +177,16 @@ jobs:
             asset_path: install_with_docker.sh
             asset_name: install_with_docker.sh
             asset_content_type: application/octet-stream
+        - name: Upload Release Asset - Install using Docker/Podman script
+          id: upload-release-asset-InstallDockerPodmanScripts
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} 
+            asset_path: install.sh
+            asset_name: install.sh
+            asset_content_type: application/octet-stream
         - name: Upload Release Asset - docker-compose.yml
           id: upload-release-asset-DockerCompose
           uses: actions/upload-release-asset@v1
