changes to docker compose to start otel collector (#479)
* changes to docker compose to start otel collector

* changes to show self monitoring dashboards

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,13 @@ services:
       - siglens
 
   siglens-metrics-otel-collector:
-    image: otel/opentelemetry-collector:latest  
+    image: docker.io/otel/opentelemetry-collector:latest 
     volumes:
-      - ./ssmetrics-otel-collector-config.yaml:/etc/ssmetrics-otel-collector-config.yaml  
+      - "${WORK_DIR}/ssmetrics-otel-collector-config.yaml:/etc/ssmetrics-otel-collector-config.yaml"  
+    
     ports:
       - "4318:4318"
+      - "2222:2222"
+    environment:
+      - WORK_DIR=${WORK_DIR}
     command: ["--config=/etc/ssmetrics-otel-collector-config.yaml"]  
