changes to add latest tag to docker build

--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -51,7 +51,15 @@ jobs:
             file: Dockerfile
             push: true
             platforms: linux/amd64,linux/arm64
-            tags: ${{ steps.meta.outputs.tags }}          
+            tags: ${{ steps.meta.outputs.tags }}
+      -
+        name: Build and push without tag (to add latest tag to build)
+        uses: docker/build-push-action@v3
+        with:
+            context: .
+            file: Dockerfile
+            push: true
+            platforms: linux/amd64,linux/arm64                 
   sigscalr-binaries:
       runs-on: ubuntu-latest
       environment: build-environment
