--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -59,7 +59,8 @@ jobs:
             context: .
             file: Dockerfile
             push: true
-            platforms: linux/amd64,linux/arm64                 
+            platforms: linux/amd64,linux/arm64   
+            tags: latest
   sigscalr-binaries:
       runs-on: ubuntu-latest
       environment: build-environment
