push image with latest tag (#490)
* push image with latest tag

* add latest tag

--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -37,6 +37,7 @@ jobs:
             images: siglens/siglens
             tags: |
               type=raw,value=${{ env.TAG }}
+              type=raw,value=latest
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -52,14 +53,7 @@ jobs:
             push: true
             platforms: linux/amd64,linux/arm64
             tags: ${{ steps.meta.outputs.tags }}
-      -
-        name: Build and push without tag (to add latest tag to build)
-        uses: docker/build-push-action@v3
-        with:
-            context: .
-            file: Dockerfile
-            push: true
-            platforms: linux/amd64,linux/arm64                 
+
   sigscalr-binaries:
       runs-on: ubuntu-latest
       environment: build-environment
