--- a/playground.yaml
+++ b/playground.yaml
@@ -17,13 +17,13 @@ pqsEnabled: false
 esVersion: "7.9.3"
 
 ## Number of hours data will be stored/retained on persistent storage.
-retentionHours: 168
+retentionHours: 48
 
 ## Percent of available RAM that siglens will occupy
 # memoryThresholdPercent: 80
 
 ## For ephemeral servers (docker, k8s) set this variable to unique container name to persist data across restarts:
-# ssInstanceName: ""
+ssInstanceName: "04c18529eb27"
 
 log:
   logPrefix : ./logs/
