--- a/server.yaml
+++ b/server.yaml
@@ -23,7 +23,8 @@ esVersion: "7.9.3"
 # memoryThresholdPercent: 80
 
 ## For ephemeral servers (docker, k8s) set this variable to unique container name to persist data across restarts:
-# ssInstanceName: ""
+# the default ssInstanceName is "sigsingle"
+ssInstanceName: "sigsingle"
 
 log:
   logPrefix : ./logs/
