add playground.yaml as release asset

--- a/.github/workflows/publish-prod-images.yml
+++ b/.github/workflows/publish-prod-images.yml
@@ -159,6 +159,16 @@ jobs:
             asset_path: server.yaml
             asset_name: server.yaml
             asset_content_type: application/octet-stream
+        - name: Upload Release Asset - playground.yaml
+          id: upload-release-asset-playgroundConfig
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.SL_GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} 
+            asset_path: playground.yaml
+            asset_name: playground.yaml
+            asset_content_type: application/octet-stream
         - name: Upload Release Asset - Install using binary script
           id: upload-release-asset-InstallBinaryScripts
           uses: actions/upload-release-asset@v1
